add a product name class
add class product-name to product section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="offset-lg-2 offset-md-2 col-md-8 col-lg-4 product-img">
                         <img src="img/product1.jpeg" alt="img-product1">
                     </div>
-                    <div class="col-lg-4 offset-lg-0 col-md-8 offset-md-2 mt-md-2">
+                    <div class="col-lg-4 offset-lg-0 col-md-8 offset-md-2 mt-md-2 product-name">
                         <h3>Product Detail Goes Here</h3>
                         <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
                             standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
@@ -82,7 +82,7 @@
             <!---->
             <div class="col-12">
                 <div class="row product-row">
-                    <div class="offset-lg-2 col-lg-4 col-md-8 offset-md-2">
+                    <div class="offset-lg-2 col-lg-4 col-md-8 offset-md-2 product-name">
                         <h3>Product Detail Goes Here</h3>
                         <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
                             standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
