--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
                   <a class="nav-link mr-5" href="index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link mr-5" href="#">Products</a>
+                    <a class="nav-link mr-5" href="products.html">Products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mr-5" href="#">Contact</a>
