--- a/products.html
+++ b/products.html
@@ -36,7 +36,7 @@
                     <a class="nav-link mr-5" href="products.html">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mr-5" href="#">Contact Us</a>
+                    <a class="nav-link mr-5" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
