--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     <a class="nav-link mr-5" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                 </li>
             </ul>
         </div>
@@ -85,7 +85,7 @@
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" aria-describedby="basic-addon1">
                         <div class="input-group-append">
-                            <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                            <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker mr-1 ml-1" aria-hidden="true"></i></span>
                         </div>
                     </div>
                     <div class="row">
@@ -97,7 +97,13 @@
             </div>
         </div>
     </div>
-   
+    <footer>
+        <div class="row footer-row">
+            <div class="col-md-5 offset-md-1 mt-4 col-sm-11 offset-sm-1">
+                <h6><b>Designed by:</b> <a href="#"> Revotech Solutions</a></h6>
+            </div>
+        </div>
+    </footer>
     <!-- end contact container -->
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
