--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                         <a class="nav-link mr-5" href="products.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mr-5" href="contact.html">Contact Us</a>
+                        <a class="nav-link mr-5" href="#">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="login.html">Login</a>
                     </li>
                 </ul>
             </div>
