--- a/products.html
+++ b/products.html
@@ -33,13 +33,13 @@
                   <a class="nav-link mr-5" href="index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link mr-5" href="products.html">Products</a>
+                    <a class="nav-link mr-5" href="#">Products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mr-5" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                 </li>
             </ul>
         </div>
