purchase.html has added
product purchase page has been added

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                     <a class="nav-link mr-5" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="login.html">Login</a>
                 </li>
             </ul>
         </div>
@@ -85,7 +85,7 @@
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" aria-describedby="basic-addon1">
                         <div class="input-group-append">
-                            <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                            <span class="input-group-text" id="basic-addon1"><i class="fa fa-map-marker mr-1 ml-1" aria-hidden="true"></i></span>
                         </div>
                     </div>
                     <div class="row">
