--- a/purchase.html
+++ b/purchase.html
@@ -48,7 +48,7 @@
     </nav>
     <!-- end - navbar -->
 
-    <div class="row mt-lg-5 mt-sm-3">
+    <div class="row mt-lg-5 mt-sm-3 xs-margin">
         <div class="col-lg-5 offset-lg-1 col-md-6 purchase-pdct-img">
             <!-- product image goes here-->
             <img src="img/product1.jpeg" width="100%" alt="Product image">
@@ -66,6 +66,7 @@
             <button class="btn btn-success btn-block mt-md-5">Place an order</button>
         </div>
     </div>
+    <br>
     <br>
     <br>
     <br>
